Se terminan todos los requisitos funcionales
