# swagger/swagger.yml
@@ -187,24 +187,6 @@ paths:
         "403":
           description: body is empty
   /proyecto/{id}:
-    get:
-      tags:
-      - proyecto
-      description: get Proyecto by id
-      operationId: ProyectoController.Get One
-      parameters:
-      - in: path
-        name: id
-        description: The key for staticblock
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Proyecto'
-        "403":
-          description: :id is empty
     put:
       tags:
       - proyecto
@@ -253,6 +235,29 @@ paths:
           description: '{string} delete success!'
         "403":
           description: id is empty
+  /proyecto/completar/{id}:
+    put:
+      tags:
+      - proyecto
+      description: update the Proyecto
+      operationId: ProyectoController.Put
+      parameters:
+      - in: header
+        name: Authorization
+        description: Token
+        type: string
+      - in: path
+        name: id
+        description: The id you want to update
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Proyecto'
+        "403":
+          description: :id is not int
   /rol/:
     get:
       tags:
@@ -413,6 +418,10 @@ paths:
       description: create Tarea
       operationId: TareaController.Post
       parameters:
+      - in: header
+        name: Authorization
+        description: Token
+        type: string
       - in: body
         name: body
         description: body for Tarea content
@@ -449,6 +458,10 @@ paths:
       description: update the Tarea
       operationId: TareaController.Put
       parameters:
+      - in: header
+        name: Authorization
+        description: Token
+        type: string
       - in: path
         name: id
         description: The id you want to update
@@ -473,6 +486,10 @@ paths:
       description: delete the Tarea
       operationId: TareaController.Delete
       parameters:
+      - in: header
+        name: Authorization
+        description: Token
+        type: string
       - in: path
         name: id
         description: The id you want to delete
@@ -665,8 +682,8 @@ definitions:
       Descripcion:
         type: string
       FechaEjecucion:
-        type: integer
-        format: int32
+        type: string
+        format: datetime
       Id:
         type: integer
         format: int64
